# code-analyzer

./: .env  .env copy  .gitignore  EXEMPLOS.md  README.md  ai_insights.py  analise_resultado.json  analysis_config.py  demo_navegador.py  generate_pdf_report.py  git_analyzer.py  insights.py  main.py  models.py  pyproject.toml  renderers.py  run_tui.sh  security_analyzer.py  test_browser.py  tui_analyzer.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
docs/: AI_INSIGHTS.md  EXEMPLO_USO_TUI.md  QUICK_START.md  TESTE_NAVEGADOR.md  TUI_GUIDE.md
src/: ai_insights.py  analysis_config.py  exceptions.py  generate_pdf_report.py  git_analyzer.py  main.py  models.py  renderers.py  security_analyzer.py  tui_analyzer.py
src/services/: __init__.py  code_analysis_service.py  git_analysis_service.py  insights_service.py  integrated_analysis_service.py  security_analysis_service.py
src/ui/: __init__.py  app.py  screens.py
src/utils/: __init__.py  formatters.py  logger.py  score_calculator.py
