[project]
name = "analiser-cocomo2"
version = "0.1.0"
description = "Analisador de código baseado em COCOMO II"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7.0",
    "pathspec>=0.12.1",
    "inquirer>=3.1.3",
    "textual>=0.47.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "semgrep>=1.86.0",
]
